# gwam-codes

./: CMakeLists.txt  CMakeLists.txt~
backup/: CMakeLists.txt.backup  compTorqueController-inl_tmp.h  compTorqueController_tmp.h  errDotGen-inl_tmp.h  errDotGen_tmp.h  myController-inl.h  myController-inl_01_06_13.h  myController-inl_14_03_13.h  myController-inl_22_02_13.h  myController-inl_26_03_13.h  myController.h  myController_01_06_13.h  myController_14_03_13.h  myController_22_02_13.h  myDtaProcessing_03_01.h  myDtaProcessing_14_03_13.h  myDtaProcessing_22_02_13.h  myUtilWAMwrapper-inl.h  test_Controller_01_06_13.cpp  test_Controller_18_02_13.cpp  test_Controller_tmp  test_dataLog_03_01.cpp  test_dataLog_14_03_13.cpp  test_dataLog_22_02_13.cpp  test_dataLog_26_03_13.cpp  tsk-inl.h  tsk.h
include/: BmatrixGenerator.hpp  C_Vector.hpp  C_Vector_reduced.hpp  CriticController.h  Dynamics.h  GMM.h  GMMTrajectory.h  Mass_matrix.hpp  Mass_matrix_reduced.hpp  QuadTS.h  compTorqueController.h  costComputeCritic.hpp  dhParams.h  dp_DynamicsBaseSystem.hpp  errDotGen.h  massMatrixHolder.hpp  myController.h  myDataProcessing.h  myUtilWAMwrapper.h  virtualSensor.h
src/: collectData.cpp  collectData2.cpp  collectData3.cpp  collectData_onlyB.cpp  computeCost_rt.cpp  dataCollector_myController.cpp  dataLog_jaType.cpp  gmm_traj_test.cpp  nilu_slidingmode_J2.cpp  playTenisLog.cpp  playTenisLog_nilu.cpp  test_Controller.cpp  test_Controller1.cpp  test_Controller2.cpp  test_Controller3.cpp  test_Controller_compController.cpp  test_Controller_myController.cpp  test_dataLog.cpp  (+2 more)
(+12 files in other folders)
